--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ loguru==0.7.2
 pyyaml==6.0.1
 pdfplumber==0.11.0
 streamlit-autorefresh==1.0.1
+fpdf==1.7.2
+weasyprint==61.2
+html5lib==1.1
+PyMuPDF==1.24.2
